# packaging_demo

./: .gitignore  demo_notes.md  pyproject.toml
tests/: conftest.py
